# cs-480

./: .gitignore  README.md  chunks.csv  crash-course.md  data.parquet  embed.csv  embeds.npy  kdd_self_study_guide.md  misc.md  pyproject.toml  syllabus.md  syllabus_v1_gemini.md  syllabus_v2_opus.md
crash_course/misc/: agentic-rag.mermaid
crash_course/module_1/: demo.py  semantic_search.ipynb  text_embeddings.ipynb
crash_course/module_2/: document_embedder.py  naive_rag.py  test_document_embedder.py  utils.py
crash_course/module_2/atlas/: classification.py  cluster.py  dimensionality_reducer.py  ingest.py  llm.py  main.py  vector_space.py  visualize.py
data/: top_subreddits.csv
